# omni-mcp-app

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml
doc/: mcp_client.ts
src/: App.vue  main.ts  style.css  styles.css
src-tauri/: Cargo.toml  build.rs  config.db  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  github_handler.rs  lib.rs  main.rs  mcp.rs  model_config.rs  save_mcp_config.rs  sqlite_db.rs  tools.rs
src/components/: CommandExecutor.vue  Greeter.vue  GreeterChat.scss  GreeterChat.ts  GreeterChat.vue  MCPClient.ts  MCPService.vue  ModelSettings.vue  ParsingMCPConfig.vue  ToolManager.vue  mcp-server-config.ts  mcp_client.ts
src/i18n/: index.ts
src/router/: index.ts
