[package]
name = "omni-mcp-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0.1"
log = "0.4"
env_logger = "0.10"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
open = "3"
rusqlite = { version = "0.29.0", features = ["bundled"] }

[profile.dev.package.objc2]
debug-assertions = false
